stop pull refresh on iphones

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
 		width: 100%;
 		height: 100%;
 		touch-action: none;
+		overflow: hidden;
 	}
     html {
       background-color: #0096c7;
